--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/svg+xml" href="pics/4.jpg" />
   <link rel="stylesheet" href="index.css">
+  <script src="main.js"></script>
   <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.0.0/uicons-bold-rounded/css/uicons-bold-rounded.css'>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +19,7 @@
       <image src="pics/full_logo.jpg" class="image-back"/>
     </div>
 
-    <div class="search-bar" style="position: relative;">
+    <div class="search-bar" style="width: 50%; position: relative;">
       <input
       id="search-bar"
       type="text" 
@@ -55,13 +56,6 @@
       <i class="fi fi-rs-toggle-on" onclick="myFunction()"></i>
     </div>
   </header>
-
-  <script>
-    function myFunction() {
-      var element = document.body;
-      element.classList.toggle("dark-mode");
-    }
-  </script>
 
   <nav>
     <div class="navigation-bar">
@@ -484,8 +478,6 @@
             </div> 
           </span>
         </div>
-        <a class="prev-product">❮</a>
-        <a class="next-product">❯</a>
       </div>
     </div>
 
